--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_core: ^0.7.0
   firebase_auth: ^0.20.1
   cloud_firestore: ^0.16.0+1
+  cloud_firestore_web: ^0.3.0+2
   shared_preferences: ^0.5.12+4
   animations: ^1.1.2
 
